ingresses/3-proxy/overlays/employees/api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-employees
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/employees`)
      services:
        - name: employee-app-latency
          port: 3000
      middlewares:
        - name: employees-rl
  tls:
